--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
   },
   "homepage": "https://github.com/milton-jr92/beverage-delivery#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "consign": "^0.1.6",
     "express": "^4.17.1",
+    "nedb": "^1.8.0",
     "nodemon": "^2.0.12"
   }
 }
