--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "body-parser": "^1.19.0",
     "consign": "^0.1.6",
     "express": "^4.17.1",
+    "mathjs": "^9.4.4",
     "nedb": "^1.8.0",
     "nodemon": "^2.0.12"
   }
