unit & suited tests automated

--- a/package.json
+++ b/package.json
@@ -21,7 +21,11 @@
     "consign": "^0.1.6",
     "express": "^4.17.1",
     "mathjs": "^9.4.4",
-    "nedb": "^1.8.0",
-    "nodemon": "^2.0.12"
+    "nedb": "^1.8.0"
+  },
+  "devDependencies": {
+    "jest": "^27.1.0",
+    "nodemon": "^2.0.12",
+    "supertest": "^6.1.6"
   }
 }
